The format is based on [Keep a Changelog](http://keepachangelog.com/) 
and this project adheres to [Semantic Versioning](http://semver.org/).
TODO
	see github log
	* redesigned flexpath
	* new version of adios

	0. use environment variable instead of preprocessor
	1. nnti in flexpath, not usable.
	2. dspaces hanging
	3. ENABLE_TESTING in flexpath conf, enabled

## Oct 2
	adios-staging didn't specify locktype=2, dspaces default type is 1
	2-d dimesions as in native dspaces?
	adios removed lock-size 2
	
## Oct 1 
	should try adios_staging skeletopn code
	1810216
		adios_staging with separate output
			consumer read is not performed

## Sep 29
	todo:
	adios_staging:
		Sep 27, else if fixed, but get blocked:
		check adios open mode, should it be opened in each step?(w in first step,
	and a in succeding steps, as in examples/staging/..genarray_stream)
## Sep 28
	todo
		adios_staging
		larger native_dimes

## Sep 27
	changes: 
		filename(scripts scripts and reader name
	fixing: adios reader initialization
## Sep 26
	dimes:
		sync before each step,
		also sync after the last step
		1798513: native dimes has 63.43 s for 100 steps!, fastest transport
## Sep 25
	changes:
		* add transports method, now differnet transport is chosen by
		Environment Variables.
	
	experiment:
		each node has 14 proccess
		
		56 nodes for producer
		28 nodes for consumer

## Sep 22
	in evpath_mpi/results/socket.log & evpath_mpi/results/enet.log
	enet also uses socket, I need to see how libsocket is implemented
	-------------------------------
	before meeting


	NEW version of ADIOS add support for redesigned flexpath!
	see changelog of adios-1-12: robust flexpath!
	transpormation us sz!
	if set flexpath version_tag = adios_1_12, nnti is no longer provided!

	evpath/cmnnti.c

	nnti/nnti.c available_tranport
	nnti_ib.cpp:
		setup_request_channel/setup_data_channel
		ibv_create_comp_channel_wrapper
		ibv_create_comp_channel
## Sep 21
	enet: timeout
	exp: