@@ -16,7 +16,7 @@
 CASE_NAME=dataspaces_nokeep
 FILESIZE2PRODUCE=256 # 64*64*256*2*8 = 16MB per proc
 NSTOP=100 # how many steps
-PROCS_SERVER=1 # dspaces server
+PROCS_SERVER=4 # dspaces server
 PROCS_PRODUCER=8
 PROCS_CONSUMER=$((PROCS_PRODUCER/2))
 num_nodes_server=1
